--- a/src/components/ContactMeBtn/ContactMeBtn.css
+++ b/src/components/ContactMeBtn/ContactMeBtn.css
@@ -1,5 +1,5 @@
 .ContactMe-btn{
-    background-color: black;
+    background-color: #50B077;
     color: rgb(255, 255, 255);
     position: relative;
     z-index: 1;
@@ -14,6 +14,6 @@
     font-size: 20px;
 }
 .ContactMe-btn:hover{
-    background-color: #1040e2;
-    cursor: url('../../assets/svg/cursor-pointer.svg'),pointer;
+    background-color:  #35734e;
+    cursor: pointer;
 }
