--- a/src/components/MyProjects/MyProjects.css
+++ b/src/components/MyProjects/MyProjects.css
@@ -1,78 +1,118 @@
 .my-projects-heading{
     transition: 0.6s ease;
     padding: 10px;
-    color: white;
     font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: sanf-bold;
+
 }
 .MyProjects-Container{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap:40px;
+    gap:30px;
+    padding: 0px 20px 20px 20px;
+    ::-webkit-scrollbar {
+        display: none
+      }
 }
-.my-projects-box-container{
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-
-}
-.my-project-box{
-    max-width: 400px;
-    overflow: hidden;
+.Project-Section-Container{
     width: 100%;
-    height: 300px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    height: 500px;
+    background-color: var(--secondary-black);
+    overflow: scroll;
+    scroll-snap-type:y mandatory;
+    border-radius: 20px;
+}
+.Project-Section{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    height: 100%;
+    scroll-snap-align: start;
+    padding: 20px;
+    height: 500px;
+}
+.Project-Section-Left{
+    padding: 10px;
+}
+.Project-Title{
+    font-size: 40px;
+    font-family: sanf-bold;
+}
+.black-text{
+    color:black;
+}
+.white{
+    color: white;
+}
+.Project-Description{
+    font-size: 18px;
+    font-family: r-light;
+}
+.Project-read-more{
+    text-decoration: none;
+    font-family: r-light;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.Project-Section img{
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 20px;
+}
+
+#Project-Section-01{
+    background-color: #60bdec;
+    border-radius: 20px;
+}
+#Project-Section-02{
+    background-color: #0d1224;
+    border-radius: 20px;
+}
+#Project-Section-03{
+    background-color: #0cb3b6;
+    border-radius: 20px;
+}
+#Project-Section-04{
+    background-color: #F5F5F7;
+    border-radius: 20px;
+}
+
+
+
+@media only screen and (max-width: 1024px) {
+    .Project-Section{
+        grid-template-columns: 1fr;
+    }
+    .Project-Section-Right{
+        display: none;
+    }
+}
+
+.Projects-page-link{
+    text-decoration: none;
+    background-color: var(--primary-color);
+    width: 160px;
+    font-size: 18px;
     color: white;
     font-family: sanf-bold;
-    font-size: 20px;
-    background-color: rgb(17, 17, 17);
-    cursor: url('../../assets/svg/cursor-pointer.svg'),pointer;
-    transition: 0.6s ease;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    display: block;
+    cursor: pointer;
 }
-.my-project-box:hover{
-    background-color: var(--primary-color);
-    transition: 0.6s ease;
+.Projects-page-link div{
+    cursor: pointer;
 }
-.my-project-box:hover .my-project-image{
-    transition: 0.6s ease;
-    filter: brightness(50%);
-    }
-.my-project-box:hover .my-project-name{
-    transition: 0.6s ease;
-    color: white;
-}
-.my-project-image{
-    transition: 0.6s ease;
-    height: 100%;
-    width: 100%;
+.center{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    cursor: url('../../assets/svg/cursor-pointer.svg'),pointer;
-}
-.my-project-image img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px 5px 0px 0px;
-    cursor: url('../../assets/svg/cursor-pointer.svg'),pointer;
-}
-
-.my-project-name{
-    position: relative;
-    z-index: 1;
-    color: white;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 10px;
-    cursor: url('../../assets/svg/cursor-pointer.svg'),pointer;
-    transition: 0.6s ease;
 }
