--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -1,11 +1,20 @@
 /* Contact Page CSS */
 #contact-me-text{
+    max-width: 700px;
     margin-top:20px ;
     text-wrap:wrap;
-    color: var(--light-black);
+
 }
+.contact-page{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .send-mail-link{
-    background-color: black;
+    background-color: #50B077;
     color: rgb(255, 255, 255);
     position: relative;
     z-index: 1;
@@ -18,10 +27,11 @@
     border-radius: 5px;
     transition: 0.6s ease;
     font-size: 20px;
+    
 }
 .send-mail-link:hover{
-    background-color: #1040e2;
-    cursor: url('../assets/svg/cursor-pointer.svg'),pointer;
+    background-color: #3e875b;
+    cursor: pointer;
 
 }
 .social-links-container{
@@ -33,12 +43,12 @@
 
 .social-links img{
     width: 50px;
+    filter: invert(16%) sepia(97%) saturate(2365%) hue-rotate(223deg) brightness(112%) contrast(115%);
     height: 50px;
     border-radius: 12px;
+    transition: 0.4s ease;
+    cursor: pointer;
 }
-.social-links:hover img{
-    cursor: url('../assets/svg/cursor-pointer.svg'),pointer;
-    filter: invert(18%) sepia(89%) saturate(3639%) hue-rotate(226deg) brightness(90%) contrast(98%);}
 .contact{
     animation: fadeIn 1s ease;
 }
@@ -57,21 +67,23 @@
     padding-bottom: 100px; */
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     gap: 20px;
 }
 .left-side-pic img{
- max-height: 500px;
+    max-height: 500px;
     min-width: 300px;
     width: 100%;
     object-fit: cover;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 15px;
 }
 .no-bottom-padding{
 padding-bottom: 0px;
+}
+.no-top-padding{
+    padding-top: 20px !important;
 }
 .flex-row{
     flex-direction: column;
@@ -80,6 +92,9 @@ padding-bottom: 0px;
     .aboutme-page-container{
         flex-direction: column;
     }
+}
+@media only screen and (min-width: 600px) {
+
 }
 @media only screen and (max-width: 700px) {
     .aboutme-page-container{
@@ -90,17 +105,16 @@ padding-bottom: 0px;
 .medium-heading{
     font-size: 20px;
     font-family: sanf-bold;
-    color: var(--secondary-black);
 }
 .bold-text{
     font-family: sanf-bold;
-    color: black;
+    
 }
 .about-me-text{
     padding-top: 10px;
-    font-family: sanf-light;
+    font-family: r-light;
     font-size: 18px;
-    color: var(--light-black);
+  
 }
 .center{
     text-align: center;
@@ -115,7 +129,7 @@ padding-bottom: 0px;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 10px;
- 
+   box-sizing: border-box;
 }
 .blur-load.loaded > img{
     opacity: 1;
@@ -123,4 +137,55 @@ padding-bottom: 0px;
 .blur-load > img{
     opacity: 0;
     transition: opacity 0.6s ease;
+}
+#blurProject01{
+    background-image: url("../assets/images/blur-load.png");
+}
+
+
+/* Projects Pages CSS */
+.project-view-page-container{
+    /* margin-left: 70px; */
+    padding: 20px;
+    min-height: 100vh;
+    padding-top: 80px;
+}
+.project-links{
+   padding-top: 20px;
+   padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    gap:10px;
+    justify-content:space-between ;
+}
+.project-screenshots-gallery{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project-screenshots-gallery img{
+    width: 700px;
+    object-fit: contain;
+}
+.bold{
+    font-family: r-medium;
+}
+.key-heading{
+    font-family: sanf-bold;
+    color:var(--secondary-black);
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 700px) {
+    .project-view-page-container{
+        margin: 0px;
+    }
+}
+@media only screen and (max-width: 810px) {
+    .project-screenshots-gallery img{
+        width: 100%;
+    }
 }
