--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 @font-face {
   font-family:Sanf ;
   src: url(./fonts/sanf/SFNSDisplay-Regular.otf);
@@ -35,7 +41,7 @@ html, body{
   /* overflow-x:hidden; */
 }
 body {
-  font-family:Sanf ;
+  font-family: 'Inter', sans-serif;
   /* overflow-x: hidden; */
   overscroll-behavior: none;
 }
