--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,14 @@ a {
   color: white;
   background: #50B077;
 }
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
